--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    google-site-verification=6-BB9YeRdOGATJbKeVaMD2whlwvPwpe1ZCSseKSmaJc
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloud Hosting Migration | Zero Downtime & SEO Protected</title>
